Resolvendo problemas relacionados com a utilização do enter na criação de tarefas e vereificação do input na ausência de tarefa escrita.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <form class="forms" action="">
             <input type="text" id="input-task" name = "name">
-            <input id="add-button" type="button" onclick="addTask()" value="add">
+            <input id="add-button" type="button" value="add">
 
         </form>
 
