melhorias no design

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         </div>
 
         <form class="forms" action="">
-            <input type="text" id="input-task" name = "name">
+            <input type="text" id="input-task" name = "name" placeholder="Escreva a sua tarefa do dia">
             <input id="add-button" type="button" value="add">
 
         </form>
 
 
 
-        <script src="./app.js"></script>
+        <script src="./main.js"></script>
 
     </div>
 </body>
